--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
     <p>&copy; 2023 Curso de Informática</p>
 </footer>
 
-<script src="script.js"></script>
+<script src=""></script>
 </body>
 </html>
