--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="#inicio">Início</a></li>
             <li><a href="#cursos">Cursos</a></li>
-            <li><a href="#Inscrição">Inscrição</a></li>
+            <li><a href="Pages/Signup.html">Inscrição</a></li>
             <li><a href="Pages/Signin.html">Login</a></li>
         </ul>
     </nav>
@@ -84,7 +84,6 @@
            
     </div>
 </section>
-
 
 <footer>
     <p>&copy; 2023 Curso de Informática</p>
