--- a/Pages/Signup.html
+++ b/Pages/Signup.html
@@ -75,8 +75,8 @@
                   <hr>
                 </div>
 
-                <p> Não tem uma conta?
-                  <a href="Signin.html"> Cadastre-se </a>
+                <p> Já tem uma conta?
+                  <a href="Signin.html"> Login </a>
                 </p>
         </div>
       </div>
